--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,8 +19,8 @@
 		</div>   -->
 		<div class="col-sm-6">
 		  Address: <br />
-		  18 Shilongshan St, YunQi Town, <br />
-		  Xihu District, 310012, Hangzhou, China<br />
+		  600 Dunyu Road, Sandun Town, <br />
+		  Xihu District, 310030, Hangzhou, China<br />
             (<a href="https://www.google.com/maps/place/%E8%A5%BF%E6%B9%96%E5%A4%A7%E5%AD%A6/@30.1361449,120.0764958,16.76z/data=!4m5!3m4!1s0x344b7ec56ca8d61b:0xabc80f84ace11271!8m2!3d30.1339474!4d120.0794882">Maps</a>)
 		</div>
 	  </div>
