update the map link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
 		  Address: <br />
 		  600 Dunyu Road, Sandun Town, <br />
 		  Xihu District, 310030, Hangzhou, China<br />
-            (<a href="https://www.google.com/maps/place/%E8%A5%BF%E6%B9%96%E5%A4%A7%E5%AD%A6/@30.1361449,120.0764958,16.76z/data=!4m5!3m4!1s0x344b7ec56ca8d61b:0xabc80f84ace11271!8m2!3d30.1339474!4d120.0794882">Maps</a>)
+            (<a href="https://www.google.com/maps/place/%E8%A5%BF%E6%B9%96%E5%A4%A7%E5%AD%A6/@30.3304794,120.0328267,18z/data=!4m5!3m4!1s0x344b643aed7a4ced:0x9bdcb6d0a8d1038d!8m2!3d30.33042!4d120.03345?hl=zh-cn">Maps</a>)
 		</div>
 	  </div>
 	</div>
